[project]
name = "AeroEngine"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "yyin9116", email = "yyin9116@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "matplotlib>=3.9.4",
  "pandas>=2.3.0",
  "scikit-opt>=0.6.6",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "AeroEngine"

# company name to display in about app dialogs
company = "yyin9116"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by yyin9116"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
